--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Datenbanken</title>
+  <meta charset="utf-8">
   <link rel="icon" type="image/x-icon" href="BKGlaLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
@@ -27,39 +28,70 @@
     <section id="allgemein" class="hidden">
       <h2>Datenbanken - Was steckt dahinter?</h2>
       <div class="paragraphs">
-        <p class="paragraph hidden">Datenbanken sind ein wichtiger Bestandteil von vielen Anwendungen und Systemen, die große Datenmengen
+        <p class="paragraph hidden">Datenbanken sind ein wichtiger Bestandteil von vielen Anwendungen und Systemen, die
+          große Datenmengen
           verwalten müssen. Microsoft Access ist ein weit verbreitetes Datenbank-Management-System, das speziell für
           kleine bis mittelgroße Anwendungen konzipiert wurde. Es bietet eine intuitive Benutzeroberfläche und
           umfangreiche Funktionen für die Erstellung und Verwaltung von Datenbanken.</p>
 
-        <p class="paragraph hidden">Eines der wichtigsten Konzepte bei der Erstellung von Datenbanken ist die Normalisierung. Normalisierung ist
+        <p class="paragraph hidden">Eines der wichtigsten Konzepte bei der Erstellung von Datenbanken ist die
+          Normalisierung. Normalisierung ist
           der Prozess der Strukturierung von Daten in einer Datenbank, um die Datenintegrität zu gewährleisten und die
           Redundanz zu reduzieren. In Access gibt es vier Normalformen, die nacheinander erfüllt werden müssen, um eine
           vollständig normalisierte Datenbank zu erhalten. Diese Normalformen helfen dabei, Datenbanken effizienter und
           wartbarer zu gestalten.</p>
 
-        <p class="paragraph hidden">Berichte sind ein weiterer wichtiger Aspekt von Datenbanken in Access. Berichte ermöglichen es, Daten in
+        <p class="paragraph hidden">Berichte sind ein weiterer wichtiger Aspekt von Datenbanken in Access. Berichte
+          ermöglichen es, Daten in
           einer übersichtlichen und strukturierten Form zu präsentieren. Mit Access können Berichte einfach erstellt und
           angepasst werden, um Daten auf verschiedene Arten zu visualisieren und zu analysieren.</p>
 
-        <p class="paragraph hidden">Formulare sind ein wichtiger Bestandteil von Datenbanken in Access, da sie die Benutzeroberfläche für die
+        <p class="paragraph hidden">Formulare sind ein wichtiger Bestandteil von Datenbanken in Access, da sie die
+          Benutzeroberfläche für die
           Eingabe und Bearbeitung von Daten bereitstellen. Mit Formularen können Benutzer schnell und einfach Daten in
           eine Datenbank eingeben oder bearbeiten. Access bietet verschiedene Funktionen, um die Erstellung und
           Anpassung von Formularen zu erleichtern.</p>
 
-        <p class="paragraph hidden">Abfragen sind ein weiteres wichtiges Element von Datenbanken in Access. Abfragen ermöglichen es Benutzern,
+        <p class="paragraph hidden">Abfragen sind ein weiteres wichtiges Element von Datenbanken in Access. Abfragen
+          ermöglichen es Benutzern,
           gezielt Daten aus einer Datenbank abzurufen, indem sie Kriterien definieren, nach denen die Daten ausgewählt
           werden sollen. Access bietet eine Vielzahl von Funktionen, um Abfragen zu erstellen und auszuführen.</p>
 
-        <p class="paragraph hidden">Das Entity-Relationship-Modell (ERM) ist ein wichtiges Konzept in der Datenbank-Modellierung. ERM ist eine
+        <p class="paragraph hidden">Das Entity-Relationship-Modell (ERM) ist ein wichtiges Konzept in der
+          Datenbank-Modellierung. ERM ist eine
           grafische Darstellung von Entitäten (Dinge oder Konzepte), die in einer Datenbank enthalten sind, sowie deren
           Beziehungen zueinander. ERM ermöglicht es, Datenbanken strukturiert zu modellieren und zu planen, bevor sie
           implementiert werden.</p>
 
-        <p class="paragraph hidden">Insgesamt bietet Access viele Funktionen und Werkzeuge, um Datenbanken zu erstellen, zu verwalten und zu
+        <p class="paragraph hidden">Insgesamt bietet Access viele Funktionen und Werkzeuge, um Datenbanken zu erstellen,
+          zu verwalten und zu
           analysieren. Normalisierung, Berichte, Formulare, Abfragen und ERM sind wichtige Konzepte, die bei der
           Erstellung von Datenbanken in Access berücksichtigt werden sollten, um effiziente und wartbare Datenbanken zu
           erstellen.</p>
+
+        <p class="paragraph hidden">Die erste Normalform (1NF) besagt, dass alle Attribute in einer Tabelle atomar sein müssen, d.h. sie dürfen nicht weiter unterteilt werden können.
+
+          Die zweite Normalform (2NF) besagt, dass jede Nicht-Schlüssel-Attribute einer Tabelle voll funktional abhängig vom gesamten Schlüssel sein muss, d.h. jedes Attribut muss vom Primärschlüssel abhängen und nicht von einem Teil des Schlüssels.
+          
+          Die dritte Normalform (3NF) besagt, dass jede Nicht-Schlüssel-Attribute in einer Tabelle transitiv abhängig vom Primärschlüssel sein darf, d.h. kein Nicht-Schlüssel-Attribut darf von einem anderen Nicht-Schlüssel-Attribut abhängig sein.</p>
+      </div>
+    </section>
+
+    <section id="ERDPlus">
+      <h2>Entity-Relationship-Modell Erstellen</h2>
+      <div class="paragraphs">
+        <p class="paragraph hidden">Das ERM (Entity-Relationship-model) ist eine Planungsmöglichkeit für eine Datenbank. Der Kasten „Entity“ ist der mittel Punkt also worum es in der Tabelle am ende geht (worüber wir die daten sammeln). Wir sammeln in unserem Beispiel Kundendaten.</p>
+        <img src="erm1.png" class="center hidden">
+        <p class="hidden">Mit dem Kasten „Attribute“ kann man dann die Unterpunkte hinzufügen also die einzelnen Informationen zum Kunden wie z.B. Name, Nachname. Dazu kommt noch der Primärschlüssel, der ebenfalls sehr wichtig als Attribut ist, da man ihn in jedem ERM benötigt. Einen Primärschlüssel kann man in einem Attribut hinzufügen indem man, wie auf dem Bild gezeigt, auf der rechten Seite bei Typen in dem Feld „Unique“ ein hacken setzt.</p>
+      <img class="center hidden" src="erm2.png">
+      <p class="hidden">Mit dem Kasten Relationship erstell man Verbindungen, wie z.B. oben im Beispiel angegeben von Kunden zu Artikel (Der Kunde (Entity) wird durch eine Bestellung (Relationship) mit dem Artikel verbunden (Entity)). Der Artikel (Entity) wird mit dem Lieferanten (Entity) durch das erhalten (Relationship) und des Artikels verbunden und er Lieferanten(Entity) mit dem Kunden(Entity) durch die Zustellung(Relationship) des Artikels. Dazu kommt das man den „Relationships“ noch eine Beziehung hinzufügen kann ( 1:n/ 1:1/ n:m) Dies gibt z.B. an das der Kunde mehrere Artikel bestellen kann und ein Artikel von mehreren Kunden bestellt werden kann.</p>
+      <img class="hidden center" src="erm3.png">
+      <h2 class="hidden">1:1 Beziehung</p>
+      <img class="hidden center" src="erm4.png">
+      <h2 class="hidden"> 1:n Beziehnung</p>
+      <img src="erm5.png" class="hidden center">
+      <h2 class="hidden">n:m Beziehung</p>
+      <img src="erm6.png" class="hidden center">
       </div>
     </section>
 
@@ -155,9 +187,12 @@
           <div class="question hidden">
             <!-- Frage 9 -->
             <h3>Frage 9: Was ist ein Primärschlüssel in Access?</h3>
-            <input type="radio" name="q9" value="a" required> a) Ein Wert, der verwendet wird, um Daten aus mehreren Tabellen zu kombinieren.<br>
-            <input type="radio" name="q9" value="b"> b) Ein Wert, der verwendet wird, um Daten in Access zu sortiere.<br>
-            <input type="radio" name="q9" value="c"> c) Ein eindeutiger Wert, der jeden Datensatz in einer Tabelle identifiziert.<br>
+            <input type="radio" name="q9" value="a" required> a) Ein Wert, der verwendet wird, um Daten aus mehreren
+            Tabellen zu kombinieren.<br>
+            <input type="radio" name="q9" value="b"> b) Ein Wert, der verwendet wird, um Daten in Access zu
+            sortiere.<br>
+            <input type="radio" name="q9" value="c"> c) Ein eindeutiger Wert, der jeden Datensatz in einer Tabelle
+            identifiziert.<br>
             <input type="radio" name="q9" value="d"> d) Ein Wert, der verwendet wird, um Daten zu filtern. <br>
             <br>
           </div>
@@ -165,90 +200,88 @@
             <!-- Frage 10 -->
             <h3>Frage 10: Wie kann man in Access Daten aus einer Tabelle löschen?
             </h3>
-            <input type="radio" name="q10" value="a" required> a) Mit einem Rechtsklick auf den Datensatz und Auswahl von "Löschen".<br>
+            <input type="radio" name="q10" value="a" required> a) Mit einem Rechtsklick auf den Datensatz und Auswahl
+            von "Löschen".<br>
             <input type="radio" name="q10" value="b"> b) Mit dem Datensatz-Assistenten.<br>
             <input type="radio" name="q10" value="c"> c) Mit dem Bericht-Assistenten.<br>
-            <input type="radio" name="q10" value="d"> d)  Über das Menü "Bearbeiten" -> "Löschen".<br>
+            <input type="radio" name="q10" value="d"> d) Über das Menü "Bearbeiten" -> "Löschen".<br>
             <br>
           </div>
           <button type="submit" id="submit-button" class="question hidden">Antworten auswerten</button>
         </form>
 
         <div id="result"></div>
-</body>
 
-</html>
+        <section id="videos" class="hidden">
+          <h2>Videos</h2>
+          <div id="videoplayer">
+            <div id="Titel">
+              <p id="titlename"></p>
+            </div>
+            <div id="Content">
+              <video id="video">
+                <source src="video.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div id="videocontrolls">
+              <button id="previous-vid" onclick="previousVideo()"><i class="fa-solid fa-backward"></i></button>
+              <button id="play-pause" onclick="togglePause()"><i class="fa-solid fa-play"></i></button>
+              <button id="next-vid" onclick="nextVideo()"><i class="fa-solid fa-forward"></i></button>
+              <div id="VolumeChanger">
+                <button id="volume"><i class="fa-solid fa-volume-high"></i></button>
+                <input type="range" id="volumeBar" min="0" max="100" value="100" step="0.1">
+              </div>
+              <button id="fullscreen"><i class="fa-solid fa-expand"></i></button>
+            </div>
+            <input type="range" id="progressbar" min="0" max="100" value="1" step="0.1">
+            <p id="transcript"></p>
+          </div>
+        </section>
 
+        <section id="aufgaben" class="hidden">
+          <h2>Übungsaufgaben</h2>
+          <p class="hidden">
+            Im folgenden finden Sie einige Übungsaufgaben. Alle Übunbgsaufgaben basieren auf eine von uns erstellte
+            Datenbank.
+            Um diese herunterzuladen, klicken sie auf den knopf "Datenbank Herunterladen".<br>Zu jeder Aufgabe gibt es
+            Tipps und
+            Lösungen. Wenn Sie hilfe benötigen, klicken sie auf den <i class="fa-solid fa-info"></i>-Knopf. Sie können
+            sich
+            selbst Kontrollieren, indem Sie die Lösungen in der Datenbank anschauen.
+          </p>
+          <button id="DownloadButton"><a href="flywerke.accdb" download id="DownloadButtonLink"
+              class="hidden">Herunterladen</a></button>
+          <div id="taskholder" class="hidden">
+            <h3 id="TaskTitle">
 
-</div>
-</section>
+            </h3>
+            <img id="TaskImage">
 
-<section id="videos" class="hidden">
-  <h2>Videos</h2>
-  <div id="videoplayer" class="hidden">
-    <div id="Titel">
-      <p id="titlename"></p>
+            <p id="TaskText">
+
+            </p>
+            <div id="TaskControllBar">
+              <button id="TaskBefore" onclick="BeforeTask()"><i class="fa-solid fa-caret-left"></i></button>
+              <button id="Tipp" onclick="tipp()"><i class="fa-solid fa-info"></i></button>
+              <button id="NextTask" onclick="NextTask()"><i class="fa-solid fa-caret-right"></i></button>
+            </div>
+          </div>
+        </section>
+
+  </main>
+
+  <div id="Footer">
+    <div>
+      Erstellt von: Eric Seidel, Maurice Monath und Paul Kretschmann
     </div>
-    <div id="Content" class="hidden">
-      <video id="video">
-        <source src="video.mp4" type="video/mp4">
-      </video>
+    <div>
+      Erstellt für das Berufskolleg Gladbeck.
     </div>
-    <div id="videocontrolls" >
-      <button id="previous-vid" onclick="previousVideo()" class="hidden videocontrols"><i class="fa-solid fa-backward"></i></button>
-      <button id="play-pause" onclick="togglePause()" class="hidden videocontrols"><i class="fa-solid fa-play"></i></button>
-      <button id="next-vid" onclick="nextVideo()" class="hidden videocontrols"><i class="fa-solid fa-forward"></i></button>
-      <div id="VolumeChanger" class="hidden videocontrols">
-        <button id="volume"><i class="fa-solid fa-volume-high"></i></button>
-        <input type="range" id="volumeBar" min="0" max="100" value="100" step="0.1">
-      </div>
-      <button id="fullscreen" class="hidden videocontrols"><i class="fa-solid fa-expand"></i></button>
-    </div>
-    <input type="range" id="progressbar" min="0" max="100" value="1" step="0.1" class="hidden">
-    <p id="transcript"class="hidden"></p>
-  </div>
-</section>
-
-<section id="aufgaben" class="hidden">
-  <h2>Übungsaufgaben</h2>
-  <p class="hidden">
-    Im folgenden finden Sie einige Übungsaufgaben. Alle Übunbgsaufgaben basieren auf eine von uns erstellte Datenbank.
-    Um diese herunterzuladen, klicken sie auf den knopf "Datenbank Herunterladen".<br>Zu jeder Aufgabe gibt es Tipps und
-    Lösungen. Wenn Sie hilfe benötigen, klicken sie auf den <i class="fa-solid fa-info"></i>-Knopf. Sie können sich
-    selbst Kontrollieren, indem Sie die Lösungen in der Datenbank anschauen.
-  </p>
-  <button id="DownloadButton"><a href="flywerke.accdb" download id="DownloadButtonLink" class="hidden">Herunterladen</a></button>
-  <div id="taskholder" class="hidden">
-    <h3 id="TaskTitle">
-
-    </h3>
-    <img id="TaskImage">
-
-    <p id="TaskText">
-
-    </p>
-    <div id="TaskControllBar">
-      <button id="TaskBefore" onclick="BeforeTask()"><i class="fa-solid fa-caret-left"></i></button>
-      <button id="Tipp" onclick="tipp()"><i class="fa-solid fa-info"></i></button>
-      <button id="NextTask" onclick="NextTask()"><i class="fa-solid fa-caret-right"></i></button>
+    <div>
+      <a href="https://berufskolleg-gladbeck.de/impressum/">Impressum</a>
     </div>
   </div>
-</section>
-
-</main>
-
-<div id="Footer">
-  <div>
-    Erstellt von: Eric Seidel, Maurice Monath und Paul Kretschmann
-  </div>
-  <div>
-    Erstellt für das Berufskolleg Gladbeck.
-  </div>
-  <div>
-    <a href="https://berufskolleg-gladbeck.de/impressum/">Impressum</a>
-  </div>
-</div>
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
