--- a/index.html
+++ b/index.html
@@ -29,21 +29,18 @@
       <h2>Datenbanken - Was steckt dahinter?</h2>
       <div class="paragraphs">
         <p class="paragraph hidden">Datenbanken sind ein wichtiger Bestandteil von vielen Anwendungen und Systemen, die
-          große Datenmengen
-          verwalten müssen. Microsoft Access ist ein weit verbreitetes Datenbank-Management-System, das speziell für
+          große Datenmengen verwalten müssen. Microsoft Access ist ein weit verbreitetes Datenbank-Management-System, das speziell für
           kleine bis mittelgroße Anwendungen konzipiert wurde. Es bietet eine intuitive Benutzeroberfläche und
           umfangreiche Funktionen für die Erstellung und Verwaltung von Datenbanken.</p>
 
         <p class="paragraph hidden">Eines der wichtigsten Konzepte bei der Erstellung von Datenbanken ist die
-          Normalisierung. Normalisierung ist
-          der Prozess der Strukturierung von Daten in einer Datenbank, um die Datenintegrität zu gewährleisten und die
+          Normalisierung. Normalisierung ist der Prozess der Strukturierung von Daten in einer Datenbank, um die Datenintegrität zu gewährleisten und die
           Redundanz zu reduzieren. In Access gibt es vier Normalformen, die nacheinander erfüllt werden müssen, um eine
           vollständig normalisierte Datenbank zu erhalten. Diese Normalformen helfen dabei, Datenbanken effizienter und
           wartbarer zu gestalten.</p>
 
         <p class="paragraph hidden">Berichte sind ein weiterer wichtiger Aspekt von Datenbanken in Access. Berichte
-          ermöglichen es, Daten in
-          einer übersichtlichen und strukturierten Form zu präsentieren. Mit Access können Berichte einfach erstellt und
+          ermöglichen es, Daten in einer übersichtlichen und strukturierten Form zu präsentieren. Mit Access können Berichte einfach erstellt und
           angepasst werden, um Daten auf verschiedene Arten zu visualisieren und zu analysieren.</p>
 
         <p class="paragraph hidden">Formulare sind ein wichtiger Bestandteil von Datenbanken in Access, da sie die
@@ -70,9 +67,9 @@
           erstellen.</p>
 
         <p class="paragraph hidden">Die erste Normalform (1NF) besagt, dass alle Attribute in einer Tabelle atomar sein müssen, d.h. sie dürfen nicht weiter unterteilt werden können.
-
+          <br>
           Die zweite Normalform (2NF) besagt, dass jede Nicht-Schlüssel-Attribute einer Tabelle voll funktional abhängig vom gesamten Schlüssel sein muss, d.h. jedes Attribut muss vom Primärschlüssel abhängen und nicht von einem Teil des Schlüssels.
-          
+          <br>
           Die dritte Normalform (3NF) besagt, dass jede Nicht-Schlüssel-Attribute in einer Tabelle transitiv abhängig vom Primärschlüssel sein darf, d.h. kein Nicht-Schlüssel-Attribut darf von einem anderen Nicht-Schlüssel-Attribut abhängig sein.</p>
       </div>
     </section>
@@ -272,7 +269,7 @@
 
   <div id="Footer">
     <div>
-      Erstellt von: Eric Seidel, Maurice Monath und Paul Kretschmann
+      Erstellt von: Eric, Maurice und Paul
     </div>
     <div>
       Erstellt für das Berufskolleg Gladbeck.
